turbo-frames to make it futuristic

--- a/html/add.gohtml
+++ b/html/add.gohtml
@@ -2,16 +2,19 @@
 <head>
     <meta charset="utf-8">
     <title>TODO</title>
+    <script type="module" src="https://cdn.skypack.dev/@hotwired/turbo"></script>
 </head>
 <body>
 <h1>Add A New Todo</h1>
-<form method="post">
-    <fieldset>
-        <legend>Add a new thing to do</legend>
-        <label for="new-item">Task name</label>
-        <input type="text" id="new-item" name="new-item" />
-        <input type="submit" value="Add">
-    </fieldset>
-</form>
+<turbo-frame id="add-todo">
+    <form method="post" action="/add" data-turbo-frame="todo-list">
+        <fieldset>
+            <legend>Add a new thing to do</legend>
+            <label for="new-item">Task name</label>
+            <input type="text" id="new-item" name="new-item" />
+            <input type="submit" value="Add">
+        </fieldset>
+    </form>
+</turbo-frame>
 </body>
 </html>
