--- a/html/todo.gohtml
+++ b/html/todo.gohtml
@@ -2,13 +2,26 @@
 <head>
     <meta charset="utf-8">
     <title>TODO</title>
+    <script type="module" src="https://cdn.skypack.dev/@hotwired/turbo"></script>
 </head>
 <body>
 <nav>
     <a href="/add">Add</a>
 </nav>
 <h1>Todo list</h1>
+<turbo-frame id="add-todo" src="/add">
+    <form method="post" action="/add" data-turbo-frame="todo-list">
+        <fieldset>
+            <legend>Add a new thing to do</legend>
+            <label for="new-item">Task name</label>
+            <input type="text" id="new-item" name="new-item" />
+            <input type="submit" value="Add">
+        </fieldset>
+    </form>
+</turbo-frame>
+
 <h2>Your to do list</h2>
+<turbo-frame id="todo-list">
     <ol>
         {{range .}}
             <li>
@@ -20,5 +33,6 @@
             </li>
         {{end}}
     </ol>
+</turbo-frame>
 </body>
 </html>
