--- a/html/todo.gohtml
+++ b/html/todo.gohtml
@@ -10,14 +10,7 @@
 </nav>
 <h1>Todo list</h1>
 <turbo-frame id="add-todo" src="/add">
-    <form method="post" action="/add" data-turbo-frame="todo-list">
-        <fieldset>
-            <legend>Add a new thing to do</legend>
-            <label for="new-item">Task name</label>
-            <input type="text" id="new-item" name="new-item" />
-            <input type="submit" value="Add">
-        </fieldset>
-    </form>
+{{template "add.partial.gohtml"}}
 </turbo-frame>
 
 <h2>Your to do list</h2>
