--- a/html/todo.gohtml
+++ b/html/todo.gohtml
@@ -1,9 +1,5 @@
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>TODO</title>
-    <script type="module" src="https://cdn.skypack.dev/@hotwired/turbo"></script>
-</head>
+{{template "header.partial.gohtml"}}
 <body>
 <nav>
     <a href="/add">Add</a>
@@ -23,6 +19,7 @@
                     <input type="hidden" name="id" value="{{.ID}}" />
                     <input type="submit" value="Delete" />
                 </form>
+                <a href="/edit/{{.ID}}" data-turbo-frame="_top">Edit</a>
             </li>
         {{end}}
     </ol>
