--- a/html/edit.gohtml
+++ b/html/edit.gohtml
@@ -1,9 +1,5 @@
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>TODO</title>
-    <script type="module" src="https://cdn.skypack.dev/@hotwired/turbo"></script>
-</head>
+{{ template "header.partial.gohtml"}}
 <body>
 <h1>Edit a Todo</h1>
 <turbo-frame id="edit-todo-{{.ID}}">
