--- a/html/todo.gohtml
+++ b/html/todo.gohtml
@@ -10,21 +10,7 @@
 </turbo-frame>
 
 <h2>Your to do list</h2>
-<turbo-frame id="todo-list">
-    <ol>
-        {{range .}}
-            <li>
-                {{.Name}}
-                <form method="post" action="/delete">
-                    <input type="hidden" name="id" value="{{.ID}}" />
-                    <input type="submit" value="Delete" />
-                </form>
-                <turbo-frame id="edit-todo-{{.ID}}">
-                    <a href="/edit/{{.ID}}">Edit</a>
-                </turbo-frame>
-            </li>
-        {{end}}
-    </ol>
-</turbo-frame>
+<turbo-frame id="toaster"></turbo-frame>
+{{template "todos.partial.gohtml" .}}
 </body>
 </html>
