--- a/html/toaster.partial.gohtml
+++ b/html/toaster.partial.gohtml
@@ -2,7 +2,7 @@
   <template>
     <turbo-frame id="toaster">
     <div>
-      <p>You have deleted {{.}}</p>
+      <p class="toaster">You have deleted {{.}}</p>
     </div>
     </turbo-frame>
   </template>
