--- a/html/header.partial.gohtml
+++ b/html/header.partial.gohtml
@@ -26,6 +26,7 @@
       position: absolute;
       top: 0;
       max-height: 0;
+      background-color: mediumvioletred;
     }
   </style>
 </head>
