content negotiation on the delete route
Will return a turbo-stream iff it can be accepted, else will redirect to /

--- a/html/header.partial.gohtml
+++ b/html/header.partial.gohtml
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8">
   <title>TODO</title>
-  <script type="module" src="https://cdn.skypack.dev/@hotwired/turbo"></script>
+{{/*  <script type="module" src="https://cdn.skypack.dev/@hotwired/turbo"></script>*/}}
   <style>
     @keyframes popup {
       0% {
