--- a/html/add.partial.gohtml
+++ b/html/add.partial.gohtml
@@ -1,8 +1,8 @@
-<turbo-frame id="add-todo">
-    <form method="post" action="/add" data-turbo-frame="todo-list">
+<turbo-frame id="add-auction">
+    <form method="post" action="/add" data-turbo-frame="auction-list">
         <fieldset>
-            <legend>Add a new thing to do</legend>
-            <label for="new-item">Task name</label>
+            <legend>Add a new auction</legend>
+            <label for="new-item">Asset name</label>
             <input type="text" id="new-item" name="new-item" />
             <input type="submit" value="Add">
         </fieldset>
