--- a/html/header.partial.gohtml
+++ b/html/header.partial.gohtml
@@ -1,6 +1,6 @@
 <head>
   <meta charset="utf-8">
-  <title>TODO</title>
+  <title>Auction</title>
   <script type="module" src="https://cdn.skypack.dev/@hotwired/turbo"></script>
   <style>
     @keyframes popup {
