--- a/html/add.gohtml
+++ b/html/add.gohtml
@@ -1,7 +1,7 @@
 <html lang="en">
 {{template "header.partial.gohtml"}}
 <body>
-<h1>Add A New Todo</h1>
+<h1>Add A New Auction</h1>
 {{template "add.partial.gohtml"}}
 </body>
 </html>
