--- a/html/edit.gohtml
+++ b/html/edit.gohtml
@@ -6,8 +6,9 @@
 <form method="post" action="/edit/{{.ID}}" data-turbo-frame="auction-list">
     <fieldset>
         <legend>Edit {{.AssetName}}</legend>
-        <label for="updated-name">Asset name</label>
-        <input type="text" id="updated-name" name="updated-name" value="{{.AssetName}}" />
+        <label>Asset name <input type="text" id="updated-name" name="updated-name" value="{{.AssetName}}" /></label>
+        <label>Seller <input type="text" id="updated-seller" name="updated-seller" value="{{.Seller}}" /></label>
+        <label>Bidder <input type="text" id="updated-bidder" name="updated-bidder" value="{{.Bidder}}" /></label>
         <input type="submit" value="Update">
     </fieldset>
 </form>
