edit auction url

--- a/html/edit.gohtml
+++ b/html/edit.gohtml
@@ -9,6 +9,7 @@
         <label>Asset name <input type="text" id="updated-name" name="updated-name" value="{{.AssetName}}" /></label>
         <label>Seller <input type="text" id="updated-seller" name="updated-seller" value="{{.Seller}}" /></label>
         <label>Bidder <input type="text" id="updated-bidder" name="updated-bidder" value="{{.Bidder}}" /></label>
+        <label>Intel URL <input type="text" id="updated-url" name="updated-url" value="{{.IntelUrl}}" /></label>
         <input type="submit" value="Update">
     </fieldset>
 </form>
