add auction url

--- a/html/add.partial.gohtml
+++ b/html/add.partial.gohtml
@@ -5,6 +5,7 @@
             <label>Asset name <input type="text" id="new-item" name="new-item" /></label>
             <label>Seller <input type="text" id="seller" name="seller" /></label>
             <label>Bidder <input type="text" id="bidder" name="bidder" /></label>
+            <label>Intel URL <input type="text" id="intelUrl" name="intelUrl" /></label>
             <input type="submit" value="Add">
         </fieldset>
     </form>
